<resources>
    <string name="app_name">Tasks</string>
    <string name="tasks_base_server_url" translatable="false">http://194.1.239.114:17646</string>

    <string name="created">created</string>
    <string name="assigned">assigned</string>
    <string name="in_progress">in progress</string>
    <string name="in_pause">in pause</string>
    <string name="check">check</string>
    <string name="completed">completed</string>
    <string name="closed">closed</string>
    <string name="rejected">rejected</string>

    <string name="unexpected_status">unexpected status</string>

    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>

    <string name="incorrect_login_or_password">incorrect login or password</string>

    <string name="error">oops… something went wrong</string>
    <string name="success">success</string>
    <string name="apply">apply</string>

    <string name="exit_from">exit from…</string>
    <string name="account">account</string>
    <string name="application">application</string>


    <string name="add">add</string>

    <string name="heres_nothing">here\'s nothing</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="documents">documents</string>
    <string name="document">document</string>
    <string name="specification">specification</string>
    <string name="save">save</string>
    <string name="document_url">document url</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="name">name</string>
    <string name="choose_user">choose user</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="tag_fragment_project_task_list" translatable="false">tag_fragment_project_task_list</string>
    <string name="credentials">credentials</string>

    <string name="create">create</string>
    <string name="title_cant_be_empty">title can\'t be empty</string>
    <string name="projects">projects</string>
    <string name="all_projects">all projects</string>
    <string name="all_tasks">all tasks</string>
    <string name="all">all</string>
    <string name="mine">mine</string>
    <string name="with_me">with me</string>

    <string name="already_added">already added</string>
    <string name="new_status">new status</string>
    <string name="comment">comment</string>

    <string name="by_me">by me</string>
    <string name="to_me">to me</string>
    <string name="search">search</string>
    <string name="created_by_me">created by me</string>
    <string name="created_by">created by</string>
    <string name="assign_to">assign to</string>
    <string name="middle_name">middle name</string>
    <string name="email" translatable="false">email</string>
    <string name="history">history</string>
    <string name="open_project">open project</string>
    <string name="without_specification">without specification</string>
    <string name="users">users</string>
    <string name="user">user</string>
    <string name="you_cant_edit_task">you can\'t edit task</string>
</resources>
