<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llBottomSearchView"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center">

        <TextView
            android:layout_margin="@dimen/spacing_xxx_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/TextHeader"
            android:textColor="@color/colorTextLight"
            android:layout_height="wrap_content"
            android:text="@string/search"/>

        <ImageButton
            android:id="@+id/bClearSearch"
            android:layout_width="@dimen/view_size_large"
            android:layout_height="@dimen/view_size_large"
            android:src="@drawable/ic_clear"
            android:background="@color/colorTransparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_xxx_small">

        <EditText
            android:id="@+id/etTaskTitleSearch"
            style="@style/EditText.WithoutUnderline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_tasks"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextLight" />

        <EditText
            android:id="@+id/etTaskDescriptionSearch"
            style="@style/EditText.WithoutUnderline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextLight" />

        <Button
            android:id="@+id/bTaskSearchCreatedBy"
            android:textColor="@color/colorTextLight"
            android:text="@string/created_by"
            style="@style/ButtonSimple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bTaskSearchAssignedTo"
            android:text="@string/assign_to"
            android:textColor="@color/colorTextLight"
            style="@style/ButtonSimple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>