<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvTitle"
                style="@style/EditText.WithoutUnderline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                android:hint="@string/title"
                android:textStyle="bold"
                android:textSize="@dimen/font_size_large"
                android:textAlignment="center" />

            <View style="@style/Separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    style="@style/ButtonSimple"
                    android:id="@+id/bDocuments"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/documents"/>
                <Button
                    style="@style/ButtonSimple"
                    android:id="@+id/bSpecification"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specification"/>
            </LinearLayout>

            <View style="@style/Separator" />

            <EditText
                android:id="@+id/tvDescription"
                android:hint="@string/description"
                style="@style/EditText.WithoutUnderline"
                android:textAlignment="textStart"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"/>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>